# d1-hero-planner

./: .gitignore  CMakeLists.txt  README.md
.github/workflows/: clang-format-check.yml  code-ql.yml  linux.yml  nightly.yml  windows-32.yml  windows.yml
languages/: lang_de_DE.ts  lang_en_US.ts  lang_es_ES.ts  lang_fr_FR.ts  lang_hu_HU.ts
resources/: D1HeroPlanner.qss  d1files.qrc
resources/nix/: d1hp.desktop
source/: affixsliderwidget.cpp  affixsliderwidget.h  config.cpp  config.h  d1cel.cpp  d1cel.h  d1celframe.cpp  d1celframe.h  d1cl2.cpp  d1cl2.h  d1cl2frame.cpp  d1cl2frame.h  d1gfx.cpp  d1gfx.h  d1hro.cpp  d1hro.h  d1image.cpp  d1image.h  d1pal.cpp  d1pal.h  d1trn.cpp  d1trn.h  herodetailswidget.cpp  herodetailswidget.h  herodetailswidget.ui  heroskillscombobox.cpp  heroskillscombobox.h  heroview.cpp  heroview.h  heroview.ui  itemdetailswidget.cpp  itemdetailswidget.h  itemdetailswidget.ui  itempropertieswidget.cpp  itempropertieswidget.h  itempropertieswidget.ui  itemselectordialog.cpp  itemselectordialog.h  itemselectordialog.ui  lineeditwidget.cpp  (+42 more)
source/dungeon/: all.h  cursor.cpp  cursor.h  defs.h  engine.cpp  engine.h  enums.h  gendung.cpp  gendung.h  interfac.cpp  interfac.h  inv.cpp  inv.h  items.cpp  items.h  lighting.cpp  lighting.h  misdat.cpp  missiles.cpp  missiles.h  monstdat.cpp  monstdat.h  monster.cpp  monster.h  pack.cpp  player.cpp  player.h  questdat.cpp  questdat.h  spelldat.h  spells.cpp  spells.h  structs.h
